@@ -4,6 +4,12 @@ Development Progress	:
 ---------------------------
 
 2013-02-04 (SVN):
+    * libs, timidity/readmidi.c: use safe_free() in read_meta_data(). no
+      need for an early return in free_midi_list(). return NULL instead
+      of newlist at the end of read_midi_event(), because the whole body
+      of the function is a for(;;) loop to begin with.
+
+2013-02-04 (SVN):
     * libs, timidity/resample.c (pre_resample): do not proceed if memory
       alloctation fails.
 
